<resources>
    <string name="app_name">GameApplication</string>
    <string name="score_initial_text_view">Score: 0</string>
    <string name="score_text_view">Score: </string>
    <string name="lives_initial_text_view">Lives: 3</string>
    <string name="lives_text_view">Lives: </string>
    <string name="pause_button_text">Pause</string>
    <string name="end_button_text">end</string>
    <string name="start_button_text">Start</string>
    <string name="new_game_button_text">New</string>
    <string name="resume_button_text">Resume</string>
</resources>
